# funsack

./: Dockerfile  README.md  dwarf.c  funsack.pyx  setup.cfg  setup.py  setup_funsack.sh
src/funsack/: dwarf.c  interface.pyx  tools.py
tools/: tools.py
