[metadata]
name = funsack
version = 0.0.1
description = FunSack: A framework to acquire functions from an executable binary via DWARF (v2-v5) debugging information.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
author = Felix Weissberg
author_email = f.weissberg@tu-bs.de
url = "https://github.com/MNayer/funsack"

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
cypack = data/*
